2004-03-07  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/LPRDoc.py: Support for graphic reports.

2004-03-07  Don Allingham  <dallingham@users.sourceforge.net>
	* src/PeopleModel.py: New GenericTreeView based model
	* src/RelLib.py: metadata/people model support
	* src/gramps_main.py: PeopleModel support
	* src/PeopleView.py: PeopleModel support

2004-03-06  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/LPRDoc.py: Cell padding support. Images support 
	(requires CVS version of gnome-python).

2004-03-05  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/LPRDoc.py: Support for paragraph's margins and
	the first indent properties. Font-specific line spacing. 
	Padding in paragraphs.

2004-03-04  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/LPRDoc.py: New paragraph formatting algorithm.
	Proper alignment support (no implementation for justify yet).
	Switch to utf8 capable fonts. Enable monospace for formatted notes.

2004-03-03  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/LPRDoc.py: Superscript support, line breaks, 
	page breaks, paragraph leader, dirty alignment hack.

2004-03-02  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/FtmStyleAncestors.py: bring up to date with IDs
	* src/plugins/AncestorReport.py: bring up to date with IDs

2004-03-02  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/AsciiDoc.py: Typo.
	* src/docgen/LPRDoc.py: Re-write using paragraph class.

2004-03-01  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/LPRDoc.py: Table support correction: transferring
	row to the next page.

	* configure.in, configure: Typo.
	* src/plugins/FtmStyleAncestors.py (endnotes): Do not add
	redundant references.
	* src/plugins/FtmStyleDescendants.py (endnotes): Do not add
	redundant references.
	* src/plugins/DetAncestralReport.py (_make_default_style): 
	Remove unused table definition.
	* src/plugins/DetDescendantReport.py (_make_default_style): 
	Remove unused table definition.
