@@ -1,3 +1,7 @@
+2004-03-08  Alex Roitman  <shura@alex.neuro.umn.edu>
+	* src/docgen/LPRDoc.py: Font autodetection: trying freefont,
+	MS fonts, and then stock Gnome fonts.
+
 2004-03-07  Alex Roitman  <shura@alex.neuro.umn.edu>
 	* src/docgen/LPRDoc.py: Support for graphic reports.
 
